# ai-hub-mcpserver

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
ai_assistant_hub/: __init__.py
ai_assistant_hub/config/: loaders.py  settings.py
ai_assistant_hub/integrations/: __init__.py  github.py  slack.py  weather.py
ai_assistant_hub/mcp/: __init__.py  tooling.py
ai_assistant_hub/schemas/: base.py
ai_assistant_hub/server/: main.py  mcp_server.py  tool_loader.py
ai_assistant_hub/tools/: github_issues.py  slack_post_message.py  weather.py
ai_assistant_hub/utils/: auth.py  errors.py  http.py  logging.py
